--- a/Clicker12/MainWindow.xaml
+++ b/Clicker12/MainWindow.xaml
@@ -5,8 +5,81 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Clicker12"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+    Title="MainWindow" Height="Auto" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
 
+        <StackPanel Grid.Column="0">
+            <Label Content="List of enemies:"/>
+            <TextBox Height="350"/>
+            <UniformGrid Columns="2">
+                <Button Content="Save" Background="Coral"/>
+                <Button Content="Load" Background="Bisque"/>
+            </UniformGrid>
+        </StackPanel>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+
+            <UniformGrid Grid.Row="0" Columns="2">
+                <StackPanel>
+                    <Label Content="Enemy icon:"/>
+                    <Image/>
+
+
+
+                </StackPanel>
+                <StackPanel>
+                    <Label Content="Icon name:" Height="30"/>
+                    <Label Content="" Height="30"/>
+                    <Label Content="Enemy Name:" Height="30"/>
+                    <TextBox Height="30"/>
+
+                </StackPanel>
+
+
+            </UniformGrid>
+
+            <UniformGrid Grid.Row="1" Rows="2" Columns="2">
+                <StackPanel>
+                    <Label Content="Base life:"/>
+                    <TextBox/>
+                </StackPanel>
+                <StackPanel>
+                    <Label Content="Base gold:"/>
+                    <TextBox/>
+                </StackPanel>
+                <StackPanel>
+                    <Label Content="Life modifier:"/>
+                    <TextBox/>
+                </StackPanel>
+                <StackPanel>
+                    <Label Content="Gold modifer:"/>
+                    <TextBox/>
+                </StackPanel>
+
+
+            </UniformGrid>
+            <StackPanel Grid.Row="2">
+                <Label Content="Spawn chance (1-100):"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox Width="160"/>
+                    <Button Content="Add" Width="80" Margin="0,0,20,0" Background="Coral"/>
+                    <Button Content="Remove" Width="80" Background="Bisque" />
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+
+        <UniformGrid Grid.Column="2" Rows="3" Columns="2">
+
+        </UniformGrid>
     </Grid>
 </Window>
