--- a/Clicker12/MainWindow.xaml
+++ b/Clicker12/MainWindow.xaml
@@ -7,22 +7,26 @@
         mc:Ignorable="d"
     Title="MainWindow" Height="Auto" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="139*"/>
+            <RowDefinition Height="257*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1.5*"/>
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0">
+        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,369,0" Grid.RowSpan="2">
             <Label Content="List of enemies:"/>
-            <TextBox Height="350"/>
+            <ListBox Height="350"/>
             <UniformGrid Columns="2">
                 <Button Content="Save" Background="Coral"/>
                 <Button Content="Load" Background="Bisque"/>
             </UniformGrid>
         </StackPanel>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,246,0" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="2*"/>
@@ -32,20 +36,14 @@
             <UniformGrid Grid.Row="0" Columns="2">
                 <StackPanel>
                     <Label Content="Enemy icon:"/>
-                    <Image/>
-
-
-
+                    <Image Height="180" Width="180"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Icon name:" Height="30"/>
-                    <Label Content="" Height="30"/>
+                    <ComboBox/>
                     <Label Content="Enemy Name:" Height="30"/>
                     <TextBox Height="30"/>
-
                 </StackPanel>
-
-
             </UniformGrid>
 
             <UniformGrid Grid.Row="1" Rows="2" Columns="2">
@@ -65,8 +63,6 @@
                     <Label Content="Gold modifer:"/>
                     <TextBox/>
                 </StackPanel>
-
-
             </UniformGrid>
             <StackPanel Grid.Row="2">
                 <Label Content="Spawn chance (1-100):"/>
@@ -78,8 +74,6 @@
             </StackPanel>
         </Grid>
 
-        <UniformGrid Grid.Column="2" Rows="3" Columns="2">
-
-        </UniformGrid>
+        <ListBox Grid.Column="2" Height="350"/>
     </Grid>
 </Window>
