--- a/Clicker12/MainWindow.xaml
+++ b/Clicker12/MainWindow.xaml
@@ -36,7 +36,7 @@
             <UniformGrid Grid.Row="0" Columns="2">
                 <StackPanel>
                     <Label Content="Enemy icon:"/>
-                    <Image Height="180" Width="180"/>
+                    <Image Height="115" Width="115" Margin="20"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Icon name:" Height="30"/>
@@ -74,6 +74,19 @@
             </StackPanel>
         </Grid>
 
-        <ListBox Grid.Column="2" Height="350"/>
+        <ListBox Grid.Column="2" Height="350" Width="230" Name="IconListBox"
+                 SelectionMode="Single">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Image Source="{Binding IconPath}" Width="115" Height="115"/>
+                    
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
