--- a/Clicker12/MainWindow.xaml
+++ b/Clicker12/MainWindow.xaml
@@ -5,12 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Clicker12"
         mc:Ignorable="d"
-    Title="MainWindow" Height="Auto" Width="800">
+    Title="MainWindow" Height="400" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="139*"/>
-            <RowDefinition Height="257*"/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1.5*"/>
             <ColumnDefinition Width="3*"/>
@@ -19,7 +15,7 @@
 
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,369,0" Grid.RowSpan="2">
             <Label Content="List of enemies:"/>
-            <ListBox Height="350"/>
+            <ListBox Height="300"/>
             <UniformGrid Columns="2">
                 <Button Content="Save" Background="Coral"/>
                 <Button Content="Load" Background="Bisque"/>
@@ -36,7 +32,7 @@
             <UniformGrid Grid.Row="0" Columns="2">
                 <StackPanel>
                     <Label Content="Enemy icon:"/>
-                    <Image Height="115" Width="115" Margin="20"/>
+                    <Image Name="EnemyIcon" Height="100" Width="100" Margin="20"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Icon name:" Height="30"/>
@@ -74,17 +70,16 @@
             </StackPanel>
         </Grid>
 
-        <ListBox Grid.Column="2" Height="350" Width="230" Name="IconListBox"
-                 SelectionMode="Single">
+        <ListBox Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="IconListBox"
+                 SelectionMode="Single" SelectionChanged="IconListBox_OnSelectionChanged">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Horizontal"/>
+                    <UniformGrid Columns="2"/>
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Image Source="{Binding IconPath}" Width="115" Height="115"/>
-                    
+                    <Image Source="{Binding IconPath}" Width="100" Height="100"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
