--- a/Clicker12/MainWindow.xaml
+++ b/Clicker12/MainWindow.xaml
@@ -15,66 +15,68 @@
 
         <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="0,0,369,0" Grid.RowSpan="2">
             <Label Content="List of enemies:"/>
-            <ListBox Height="300"/>
+            <ListBox ItemsSource="{Binding enemies}" DisplayMemberPath="Name" Name="EnemyListBox" Height="300"/>
             <UniformGrid Columns="2">
-                <Button Content="Save" Background="Coral"/>
-                <Button Content="Load" Background="Bisque"/>
+                <Button Height="30" Content="Save" Background="Coral"/>
+                <Button  Content="Load" Background="Bisque"/>
             </UniformGrid>
         </StackPanel>
 
         <Grid Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,246,0" Grid.RowSpan="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
             <UniformGrid Grid.Row="0" Columns="2">
                 <StackPanel>
                     <Label Content="Enemy icon:"/>
-                    <Image Name="EnemyIcon" Height="100" Width="100" Margin="20"/>
+                    <Image Name="EnemyIcon" Height="100" Width="100" Margin="20"
+                           Source="{Binding IconPath}"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Icon name:" Height="30"/>
-                    <ComboBox/>
+                    <ComboBox Height="30"/>
                     <Label Content="Enemy Name:" Height="30"/>
-                    <TextBox Height="30"/>
+                    <TextBox Text="{Binding ElementName=EnemyListBox, Path=SelectedItem.Name, Mode=TwoWay}"
+                             Height="30"/>
                 </StackPanel>
             </UniformGrid>
 
-            <UniformGrid Grid.Row="1" Rows="2" Columns="2">
+            <UniformGrid Grid.Row="1" Columns="2">
                 <StackPanel>
                     <Label Content="Base life:"/>
-                    <TextBox/>
+                    <TextBox Height="30"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Base gold:"/>
-                    <TextBox/>
+                    <TextBox Height="30"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Life modifier:"/>
-                    <TextBox/>
+                    <TextBox Height="30"/>
                 </StackPanel>
                 <StackPanel>
                     <Label Content="Gold modifer:"/>
-                    <TextBox/>
+                    <TextBox Height="30"/>
+                </StackPanel>
+                <StackPanel>
+                <Label Content="Spawn chance (1-100):"/>
+                <TextBox Height="30"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Button Name="Add" Height="30" Width="90" Content="Add" Background="Coral" Click="Add_Click"/>
+                    <Button Name="Remove" Height="30" Width="90" Content="Remove" Background="Bisque" Click="Remove_Click" />
                 </StackPanel>
             </UniformGrid>
-            <StackPanel Grid.Row="2">
-                <Label Content="Spawn chance (1-100):"/>
-                <StackPanel Orientation="Horizontal">
-                    <TextBox Width="160"/>
-                    <Button Content="Add" Width="80" Margin="0,0,20,0" Background="Coral"/>
-                    <Button Content="Remove" Width="80" Background="Bisque" />
-                </StackPanel>
-            </StackPanel>
         </Grid>
 
         <ListBox Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="IconListBox"
-                 SelectionMode="Single" SelectionChanged="IconListBox_OnSelectionChanged">
+                 SelectionMode="Single" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 SelectionChanged="IconListBox_OnSelectionChanged">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Columns="2"/>
+                    <WrapPanel/>
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
