--- a/THE_GAME/MainWindow2.xaml
+++ b/THE_GAME/MainWindow2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Clicker.MainWindow2"
+﻿<Window x:Class="THE_GAME.MainWindow2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Clicker" Height="550" Width="800">
